fix: padding on mobile benefits

--- a/src/components/Offers/Benefits/benefits.scss
+++ b/src/components/Offers/Benefits/benefits.scss
@@ -57,7 +57,7 @@
   .benefits__grid {
     margin-top: 19px;
     margin-bottom: 0;
-    transform: translateX(18px);
+    padding-left: 18px;
     gap: 15px 24px;
   }
 
